--- a/source/scss/about-library.scss
+++ b/source/scss/about-library.scss
@@ -22,10 +22,32 @@ body{
 
 
 .header{
-
+padding-bottom: 100px;
 
   &__bg-line{
-    background-color:rgba(20, 20, 20, 0.8);
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 25px;
+    margin-bottom: 120px;
+    background:  url('../../img/library-bg.png') center/cover no-repeat;
+
+  }
+
+      .header__bg-line:before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(20, 20, 20, 0.7);
+      z-index: -2;
   }
 
   .header__bg{
@@ -37,7 +59,7 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 40px ;
+
 
 
   }
@@ -87,7 +109,7 @@ body{
 }
 
 .main {
-  padding: 10px;
+  padding: 40px 10px;
   background-color: #efefef;
 
   &__body {
@@ -159,9 +181,159 @@ body{
 }
 
 
+@media (max-width: 960px) {
+
+  .main__text {
+    font-size: 19px;
+    padding: 3px 20px;
+  }
+
+
+  @media (max-width: 768px) {
+
+      .main__text {
+    font-size: 25px;
+    padding: 5px 20px;
+  }
+
+
+    .main{
+      padding: 0;
+
+        .container{
+          padding: 0;
+        }
+
+      &__bg{
+        background: url('../../img/adaptib__about.jpg') center/cover no-repeat;
+        height: 1500px;
+      }
+
+
+    &__body{
+      flex-wrap: wrap;
+      justify-content: center;
+
+      h2{
+        padding-top: 30px;
+      }
 
 
 
+    }
+
+    }
+
+
+    .header__burger {
+      display: block;
+      position: relative;
+      width: 30px;
+      height: 20px;
+
+    }
+
+    .header__burger:before,
+    .header__burger:after {
+      content: '';
+      background-color: #ff3600;
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      left: 0;
+      z-index: 4;
+      transition: all 0.3s ease 0s;
+
+    }
+
+    .header__burger:before {
+      top: 0;
+    }
+
+    .header__burger:after {
+      bottom: 0;
+    }
+
+    .header__burger span {
+      position: absolute;
+      background-color: #ff3600;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      top: 9px;
+      z-index: 4;
+    }
+
+    .header__menu {
+      position: fixed;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background-color: #ff5c33;
+      transition: 0.3s;
+      opacity: 1;
+
+    }
+
+    .header__burger.active:before {
+      transform: rotate(45deg);
+      top: 9px;
+
+    }
+
+    .header__burger.active:after {
+      transform: rotate(-45deg);
+      bottom: 9px;
+
+    }
+
+    .header__burger.active span {
+      transform: scale(0);
+
+    }
+
+    .header__menu.active {
+      left: 0;
+
+
+    }
+
+    .header__list {
+      display: flex;
+      flex-direction: column;
+
+      li {
+
+        padding: 20px 0;
+      }
+
+    }
+    body.lock {
+      overflow: hidden;
+    }
+  }
+}
+
+
+@media (max-width: 450px){
+    .main__bg{
+        background: url('../../img/adaptib__about.jpg') center/cover no-repeat;
+        height: 1800px;
+      }
+
+
+}
+
+
+@media (max-width: 394px){
+    .main__bg{
+        background: url('../../img/adaptib__about.jpg') center/cover no-repeat;
+        height: 2300px;
+      }
+
+
+}
 
 
 
