--- a/source/scss/contact-library.css
+++ b/source/scss/contact-library.css
@@ -82,8 +82,31 @@ body {
   padding: 0 20px;
 }
 
+.header {
+  padding-bottom: 100px;
+}
 .header__bg-line {
-  background-color: rgba(20, 20, 20, 0.8);
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 25px;
+  margin-bottom: 120px;
+  background: url("../../img/library-bg.png") center/cover no-repeat;
+}
+.header .header__bg-line:before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(20, 20, 20, 0.7);
+  z-index: -2;
 }
 .header .header__bg {
   background: url("../../img/library-bg.png") center/cover no-repeat;
@@ -93,8 +116,6 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding: 40px;
-  margin-bottom: 5px;
 }
 .header__list {
   display: flex;
@@ -143,7 +164,6 @@ body {
 }
 .contact .card-contact {
   color: #FFFFFF;
-  display: flex;
   justify-content: center;
   padding-bottom: 30px;
 }
@@ -261,4 +281,98 @@ body {
 }
 .footer__soc img {
   margin: 0 10px;
+}
+
+@media (max-width: 1070px) {
+  .contact__card {
+    transform: scale(0.9);
+  }
+}
+@media (max-width: 768px) {
+  .contact__card {
+    grid-template-columns: repeat(1, 1fr);
+    margin: 0 auto;
+  }
+  .contact .card-contact {
+    padding-bottom: 0;
+    margin: 0 auto;
+  }
+
+  .header__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+  }
+
+  .header__burger:before,
+.header__burger:after {
+    content: "";
+    background-color: #ff3600;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    z-index: 4;
+    transition: all 0.3s ease 0s;
+  }
+
+  .header__burger:before {
+    top: 0;
+  }
+
+  .header__burger:after {
+    bottom: 0;
+  }
+
+  .header__burger span {
+    position: absolute;
+    background-color: #ff3600;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+    z-index: 4;
+  }
+
+  .header__menu {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #ff5c33;
+    transition: 0.3s;
+    opacity: 1;
+  }
+
+  .header__burger.active:before {
+    transform: rotate(45deg);
+    top: 9px;
+  }
+
+  .header__burger.active:after {
+    transform: rotate(-45deg);
+    bottom: 9px;
+  }
+
+  .header__burger.active span {
+    transform: scale(0);
+  }
+
+  .header__menu.active {
+    left: 0;
+  }
+
+  .header__list {
+    display: flex;
+    flex-direction: column;
+  }
+  .header__list li {
+    padding: 20px 0;
+  }
+
+  body.lock {
+    overflow: hidden;
+  }
 }
