--- a/source/scss/resource.scss
+++ b/source/scss/resource.scss
@@ -19,10 +19,32 @@ body{
 
 
 .header{
-
+padding-bottom: 100px;
 
   &__bg-line{
-    background-color:rgba(20, 20, 20, 0.8);
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 25px;
+    margin-bottom: 120px;
+    background:  url('../../img/library-bg.png') center/cover no-repeat;
+
+  }
+
+      .header__bg-line:before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(20, 20, 20, 0.7);
+      z-index: -2;
   }
 
   .header__bg{
@@ -34,8 +56,8 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 40px ;
-    margin-bottom: 5px;
+
+
 
   }
 
@@ -62,11 +84,11 @@ body{
 
   }
 
-  &__logo{
+  &__logo {
 
-    h2{
+    h2 {
 
-      span{
+      span {
         font-weight: 700;
       }
 
@@ -175,3 +197,136 @@ line-height: 22px;
 
 
 }
+
+@media(max-width: 1000px){
+  .header{
+    margin-bottom: 40px;
+
+  }
+}
+
+@media (max-width: 768px) {
+
+   .header{
+    margin-bottom: 0;
+  }
+
+
+.header__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+
+  }
+
+  .header__burger:before,
+  .header__burger:after {
+    content: '';
+    background-color: #ff3600;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+     z-index: 4;
+    transition: all 0.3s ease 0s;
+
+  }
+
+  .header__burger:before {
+    top: 0;
+  }
+
+  .header__burger:after {
+    bottom: 0;
+  }
+
+  .header__burger span {
+    position: absolute;
+   background-color: #ff3600;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+    z-index: 4;
+  }
+
+  .header__menu {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #ff5c33;
+    transition: 0.3s;
+    opacity: 1;
+
+  }
+
+  .header__burger.active:before{
+    transform: rotate(45deg);
+     top: 9px;
+
+  }
+
+  .header__burger.active:after{
+    transform: rotate(-45deg);
+    bottom: 9px;
+
+  }
+
+   .header__burger.active span{
+    transform: scale(0);
+
+  }
+
+  .header__menu.active {
+    left: 0;
+
+
+  }
+
+  .header__list{
+    display: flex;
+    flex-direction: column;
+
+    li{
+
+      padding: 20px 0;
+    }
+
+  }
+ body.lock{
+    overflow: hidden;
+  }
+
+  .news{
+
+    &__logo{
+      font-size: 26px;
+    }
+
+    .card-news{
+
+      &__title{
+        font-size: 25px;
+      }
+
+      &__text{
+        font-size: 16px;
+      }
+
+
+    }
+
+
+  }
+
+
+
+}
+
+
+
+
+
