--- a/source/scss/style.css
+++ b/source/scss/style.css
@@ -83,19 +83,37 @@ body {
 }
 
 .header__bg-line {
-  background-color: rgba(20, 20, 20, 0.8);
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 25px;
+  margin-bottom: 120px;
 }
 .header .header__bg {
   background: url("../../img/library-bg.png") center/cover no-repeat;
   margin: 0 auto;
   height: 670px;
+  z-index: -2;
 }
 .header__menu {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding: 40px;
-  margin-bottom: 120px;
+}
+.header .header__bg-line:before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(20, 20, 20, 0.8);
+  z-index: -2;
 }
 .header__list {
   display: flex;
@@ -138,7 +156,7 @@ body {
   line-height: 37px;
   text-align: center;
   color: #FFFFFF;
-  padding-bottom: 25px;
+  padding-top: 250px;
 }
 .header__title h1 {
   font-family: Oswald, sans-serif;
@@ -148,6 +166,7 @@ body {
   line-height: 119px;
   text-align: center;
   color: #FFFFFF;
+  padding-top: 10px;
 }
 
 .main {
@@ -166,11 +185,16 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
+}
+.main .image__adaptiv img {
+  display: none;
 }
 .main__about {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .footer {
@@ -187,4 +211,134 @@ body {
 }
 .footer__soc img {
   margin: 0 10px;
+}
+
+@media (max-width: 960px) {
+  .header__title h1 {
+    font-size: 55px;
+  }
+
+  main img.image-block {
+    display: none;
+  }
+  main__hello {
+    transform: scale(0.8);
+  }
+  main__about {
+    transform: scale(0.8);
+  }
+  main p {
+    margin: 0 auto;
+    text-align: center;
+    padding: 10px 0;
+  }
+}
+@media (max-width: 768px) {
+  .header__title h1 {
+    font-size: 40px;
+  }
+  .header__title h2 {
+    max-width: 550px;
+    margin: 0 auto;
+    font-size: 25px;
+    padding: 220px 0 0 0;
+  }
+
+  .main {
+    padding: 20px 0;
+  }
+  .main__hello {
+    transform: scale(0.8);
+  }
+  .main__hello img.image-block {
+    display: none;
+  }
+  .main__about {
+    transform: scale(0.8);
+  }
+  .main p {
+    font-size: 20px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 10px 0;
+  }
+
+  .header__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+  }
+
+  .header__burger:before,
+.header__burger:after {
+    content: "";
+    background-color: #FFFFFF;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    z-index: 4;
+    transition: all 0.3s ease 0s;
+  }
+
+  .header__burger:before {
+    top: 0;
+  }
+
+  .header__burger:after {
+    bottom: 0;
+  }
+
+  .header__burger span {
+    position: absolute;
+    background-color: #FFFFFF;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+    z-index: 4;
+  }
+
+  .header__menu {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #ff5c33;
+    transition: 0.3s;
+    opacity: 1;
+  }
+
+  .header__burger.active:before {
+    transform: rotate(45deg);
+    top: 9px;
+  }
+
+  .header__burger.active:after {
+    transform: rotate(-45deg);
+    bottom: 9px;
+  }
+
+  .header__burger.active span {
+    transform: scale(0);
+  }
+
+  .header__menu.active {
+    left: 0;
+  }
+
+  .header__list {
+    display: flex;
+    flex-direction: column;
+  }
+  .header__list li {
+    display: block;
+    padding: 20px 0;
+  }
+
+  body.lock {
+    overflow: hidden;
+  }
 }
