--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -21,25 +21,48 @@ body{
 .header{
 
 
+
   &__bg-line{
-    background-color:rgba(20, 20, 20, 0.8);
+position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 25px;
+    margin-bottom: 120px;
   }
 
   .header__bg{
     background:  url('../../img/library-bg.png') center/cover no-repeat;
     margin: 0 auto;
     height: 670px;
+    z-index: -2;
+
 
   }
 
-  &__menu{
+  &__menu {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 40px ;
-    margin-bottom: 120px;
+
 
   }
+
+    .header__bg-line:before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(20, 20, 20, 0.8);
+      z-index: -2;
+  }
+
 
   &__list{
     display: flex;
@@ -82,6 +105,7 @@ body{
   }
 
   &__title{
+
     max-width: 720px;
     margin: 0 auto;
     h2{
@@ -92,7 +116,8 @@ font-size: 30px;
 line-height: 37px;
 text-align: center;
 color: #FFFFFF;
-      padding-bottom: 25px;
+        padding-top: 250px;
+
     }
 
     h1{
@@ -103,6 +128,7 @@ font-size: 80px;
 line-height: 119px;
 text-align: center;
 color: #FFFFFF;
+      padding-top: 10px;
     }
 
 
@@ -131,16 +157,22 @@ color: #FFFFFF;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
+
 
 
 
   }
 
+  .image__adaptiv img{
+  display: none;
+  }
 
   &__about {
     display: flex;
     align-items: center;
       justify-content: space-between;
+    flex-wrap: wrap;
 
   }
 
@@ -171,9 +203,193 @@ color: #FFFFFF;
 
 }
 
+@media(max-width: 960px){
+
+  .header{
+    &__title{
+      h1{
+        font-size: 55px;
+      }
+
+
+    }
+
+  }
 
 
 
+
+  main{
+ img.image-block{
+     display: none;
+    }
+
+
+
+ &__hello{
+        transform: scale(0.8);
+
+    }
+
+
+
+    &__about{
+       transform: scale(0.8);
+    }
+
+    p{
+      margin: 0 auto;
+      text-align: center;
+      padding: 10px 0;
+    }
+
+
+
+  }
+
+
+}
+
+
+
+
+@media (max-width: 768px) {
+
+
+
+  .header{
+
+
+    &__title{
+      h1{
+        font-size: 40px;
+      }
+      h2{
+        max-width: 550px;
+        margin: 0 auto;
+        font-size: 25px;
+        padding: 220px 0 0 0;
+      }
+
+    }
+
+  }
+
+
+  .main{
+      padding: 20px 0;
+    &__hello{
+        transform: scale(0.8);
+ img.image-block{
+     display: none;
+    }
+    }
+
+    &__about{
+       transform: scale(0.8);
+    }
+
+    p{
+      font-size: 20px;
+      margin: 0 auto;
+      text-align: center;
+      padding: 10px 0;
+    }
+
+
+
+  }
+
+
+
+  .header__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+
+  }
+
+  .header__burger:before,
+  .header__burger:after {
+    content: '';
+    background-color: #FFFFFF;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+     z-index: 4;
+    transition: all 0.3s ease 0s;
+
+  }
+
+  .header__burger:before {
+    top: 0;
+  }
+
+  .header__burger:after {
+    bottom: 0;
+  }
+
+  .header__burger span {
+    position: absolute;
+   background-color: #FFFFFF;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+    z-index: 4;
+  }
+
+  .header__menu {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #ff5c33;
+    transition: 0.3s;
+    opacity: 1;
+
+  }
+
+  .header__burger.active:before{
+    transform: rotate(45deg);
+     top: 9px;
+
+  }
+
+  .header__burger.active:after{
+    transform: rotate(-45deg);
+    bottom: 9px;
+
+  }
+
+   .header__burger.active span{
+    transform: scale(0);
+
+  }
+
+  .header__menu.active {
+    left: 0;
+
+
+  }
+
+  .header__list{
+    display: flex;
+    flex-direction: column;
+
+    li{
+      display: block;
+      padding: 20px 0;
+    }
+
+  }
+ body.lock{
+    overflow: hidden;
+  }
+}
 
 
 
